syntax = "proto3";

package crypto;

service Crypto {
	rpc EncryptA52(stream A52Request) returns (stream Chunk);
	rpc DecryptA52(stream A52Request) returns (stream Chunk);

	rpc EncryptRailFence(stream RailFenceRequest) returns (stream RailFenceResponse);
	rpc DecryptRailFence(stream RailFenceRequest) returns (stream RailFenceResponse);

	rpc EncryptXTEA(stream XTEARequest) returns (stream Chunk);
	rpc DecryptXTEA(stream XTEARequest) returns (stream Chunk);
}

message Chunk {
	bytes bytes = 1;
}

message A52Request {
	Chunk chunk = 1;
	string key = 2;
	string iv = 3;
}

message RailFenceRequest {
	string text = 1;
	int32 rails = 2;
}

message RailFenceResponse {
	string text = 1;
}

message XTEARequest {
	string key = 1;
	Chunk chunk = 2;
}

